<resources>
    <string name="app_name">Crowns</string>
    <string name="title_n_queens">N ферзей</string>
    <string name="title_queens">Королевы</string>
    <string name="title_killer_sudoku">Killer-судоку</string>
    <string name="start_game">Начать игру</string>
    <string name="easy">Простой</string>
    <string name="medium">Средний</string>
    <string name="difficult">Сложный</string>
    <string name="boardContentDescription">Игровое поле</string>
    <string name="fers">Ферзь</string>
    <string name="queen">Королева</string>
    <string name="empty">Пусто</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="five_by_five">5 × 5</string>
    <string name="six_by_six">6 × 6</string>
    <string name="seven_by_seven">7 × 7</string>
    <string name="eight_by_eight">8 × 8</string>
    <string name="nine_by_nine">9 × 9</string>
    <string name="ten_by_ten">10 × 10</string>
    <string name="coins">Монетки</string>
    <string name="hints">Подсказки</string>
    <string name="win">Вы выиграли!</string>
    <string name="prize">Ваш выйгрыш: %1$d</string>
    <string name="new_level">Новый уровень</string>
    <string name="menu">Меню</string>
    <string name="resume_game">Продолжить игру</string>
    <string name="get_hint">Взять подсказку</string>
    <string name="mistake_count">Количество ошибок</string>
    <string name="hint_count">Количество взятых подсказок</string>
    <string name="n_queens_missing_crosses_hint_text">В выделенных зеленым клеточках нет ферзей, так как они находятся в одной строке/столбце/диагонали с другими ферзями. Эти клетки могут быть помечены крестиками.</string>
    <string name="undefined_hint_text">Не удалось подобрать подсказку</string>
    <string name="n_queens_one_in_column_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в столбце. В ней должен находиться ферзь.</string>
    <string name="n_queens_one_in_row_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в строке. В ней должен быть ферзь.</string>
    <string name="n_queens_rule_breaking_placement_hint_text">В зеленой клеточке не может быть королевы, так как это приведет к тому, что красная зона останется пустой.</string>
    <string name="queens_row_exclusion_zone_hint_text">В зеленой зоне должно находиться %1$s. Так как в каждом столбце должен быть только один ферзь, в красной зоне не может быть других королев, её можно заполнить крестиками.</string>
    <string name="queens_column_exclusion_zone_hint_text">В зеленой зоне должно находиться %1$s. Так как в каждой строке должен быть только один ферзь, в красной зоне не может быть других королев, её можно заполнить крестиками.</string>
    <string name="queens_polyomino_exclusion_zone_hint_text">В каждой цветовой зоне должна быть одна королева, отсюда зеленой зоне должно находиться %1$s. Значит, в красной зоне не может быть других королев, её можно заполнить крестиками.</string>
    <string name="queens_missing_crosses_hint_text">В выделенных зеленым клеточках нет королев, так как они находятся в одной строке/столбце/цветовой зоне или касаются другой королевы. Эти клетки могут быть помечены крестиками.</string>
    <string name="queens_one_in_column_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в столбце. В ней должна быть королева.</string>
    <string name="queens_one_in_row_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в строке. В ней должна быть королева.</string>
    <string name="queens_one_in_polyomino_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в этой цветовой зоне. В ней должна быть королева.</string>
    <string name="queens_rule_breaking_placement_hint_text">В зеленой клеточке не может быть королевы, так как это приведет к тому, что красная зона останется пустой.</string>
    <string name="n_queens_row_exclusion_zone_hint_text">В зеленой зоне должно находиться %1$s. Так как в каждом столбце должен быть только один ферзь, в красной зоне не может быть других ферзей, её можно заполнить крестиками.</string>
    <string name="n_queens_column_exclusion_zone_hint_text">В зеленой зоне должно находиться %1$s. Так как в каждой строке должен быть только один ферзь, в красной зоне не может быть других ферзей, её можно заполнить крестиками.</string>

    <string name="ksudoku_one_in_column_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в столбце. В ней должна стоять %1$d.</string>
    <string name="ksudoku_one_in_row_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в строке. В ней должна стоять %1$d.</string>
    <string name="ksudoku_one_in_box_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в малом квадрате. В ней должна стоять %1$d.</string>
    <string name="ksudoku_one_in_polyomino_hint_text">Выделенная зеленым клеточка - последняя пустая клетка в цветовой зоне. Исходя из суммы, в ней должна стоять %1$d.</string>
    <string name="pause">Пауза</string>
    <string name="rerun">Начать заново</string>
    <string name="buy_hint">Хотите купить подсказку за %1$d монеты?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="not_enough_money">Недостаточно средств</string>
    <string name="guide">Инструкция</string>
    <string name="rules">Правила</string>
    <string name="n_queens_rules">Необходимо дополнить количество ферзей до N, где N – это порядок игрового поля, так чтобы ни один ферзь не атаковал другого, т. е. так чтобы никакие два ферзя не стояли на одной горизонтали, одной вертикали или одной диагонали.</string>
    <string name="queens_rules">Необходимо дополнить количество корон до N, где N – порядок игрового поля, так, чтобы:\n1) в каждой строке была только одна корона;\n2) в каждом столбце была только одна корона;\n3) в каждой цветовой области была только одна корона;\n4) короны не касались друг друга.</string>
    <string name="killer_sudoku_rules">Необходимо заполнить свободные клеточки цифрами от 1 до 9 так, чтобы \n1) в каждой строчке цифры встречались только по одному разу;\n2) в каждом столбце цифры встречались только по одному разу;\n3) в каждом малом квадрате 3х3 цифры встречались только по одному разу;\n4) в каждой цветовой зоне цифры встречались только по одному разу;\n5) для каждой цветовой зоны, сумма цифр, стоящих в ней, совпадала с числом вверху этой зоны</string>
    <string name="killer_sudoku_example">Пример игры killer-судоку</string>
    <string name="queens_example">Пример игры Королевы</string>
    <string name="n_queens_example">Пример игры N ферзей</string>
</resources>