<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_queens">

    <fragment
        android:id="@+id/navigation_n_queens"
        android:name="ru.hse.crowns.ui.nQueensHome.NQueensHomeFragment"
        android:label="@string/title_n_queens"
        tools:layout="@layout/fragment_n_queens_home" />

    <fragment
        android:id="@+id/navigation_queens"
        android:name="ru.hse.crowns.ui.queensHome.QueensHomeFragment"
        android:label="@string/title_queens"
        tools:layout="@layout/fragment_queens_home" />

    <fragment
        android:id="@+id/navigation_killer_sudoku"
        android:name="ru.hse.crowns.ui.killerSudokuHome.KillerSudokuFragment"
        android:label="@string/title_killer_sudoku"
        tools:layout="@layout/fragment_killer_sudoku_home" />
</navigation>