<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.KillerSudoku"
    tools:context=".ui.game.killerSudokuGame.KillerSudokuGameFragment">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="eraseToggleButton,noteSwitch,board,valueRadioGroup" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/eraseToggleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_eraser_black_24dp"
        android:backgroundTint="@color/toggle_button_background_tint"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/noteSwitch"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/noteSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/noteSwitch" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/noteSwitch"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:checked="true"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:showText="false"
        app:thumbIcon="@drawable/killer_sudoku_thumb_icon"
        app:thumbIconTint="@color/thumb_icon_tint"
        tools:checked="true" />

    <include
        android:id="@+id/board"
        layout="@layout/grid_board"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@id/noteSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/valueRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:checkedButton="@id/radioButton1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/noteSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/four" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/five" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/six" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/seven" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/eight" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorSingle"
            android:gravity="center"
            android:text="@string/nine" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>